--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,32 @@
-<h1>Make your form here</h1>
+<h1>Create a New Pirate</h1>
+<form method='POST' action='/pirates'>
+    <label for='pirate[name]'>Pirate Name</label>
+    <input type='text' name='pirate[name]'>
+    <br></br>
+    <label for='pirate[weight]'>Pirate Weight</label>
+    <input type='text' name='pirate[weight]'>
+    <br></br>
+    <label for='pirate[height]'>Pirate Height</label>
+    <input type='text' name='pirate[height]'>
+    <br></br>
+    <label for='pirate[ships][][name]'>Ship 1 Name</label>
+    <input id='ship_name_1' type='text' name='pirate[ships][][name]'>
+    <br></br>
+    <label for='pirate[ships][][type]'>Ship 1 Type</label>
+    <input id='ship_type_1' type='text' name='pirate[ships][][type]'>
+    <br></br>
+    <label for='pirate[ships][][booty]'>Ship 1 Booty</label>
+    <input id='ship_booty_1' type='text' name='pirate[ships][][booty]'>
+    <br></br>
+    <label for='pirate[ships][][name]'>Ship 2 Name</label>
+    <input id='ship_name_2' type='text' name='pirate[ships][][name]'>
+    <br></br>
+    <label for='pirate[ships][][type]'>Ship 2 Type</label>
+    <input id='ship_type_2' type='text' name='pirate[ships][][type]'>
+    <br></br>
+    <label for='pirate[ships][][booty]'>Ship 2 Booty</label>
+    <input id='ship_booty_2' type='text' name='pirate[ships][][booty]'
+    <br></br>
+    <br></br>
+    <input id='Submit' type='submit'>
+</form>
