--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,15 @@
-<h1>Display your Pirate here</h1>
+<h1>Pirate Info</h1>
+<h2>Name: <%= @pirate_name %></h2>
+<h2>Weight: <%= @weight %></h2>
+<h2>Height: <%= @height %></h2>
 
+<h2>Ship One</h2>
+<h3>Name: <%= @ship_1_name %></h3>
+<h3>Type: <%= @ship_1_type %></h3>
+<h3>Booty: <%= @ship_1_booty %></h3>
 
-<h2>Display your first ship here</h2>
+<h2>Ship Two</h2>
+<h3>Name: <%= @ship_2_name %></h3>
+<h3>Type: <%= @ship_2_type %></h3>
+<h3>Booty: <%= @ship_2_booty %></h3>
 
-
-<h2>Display your second ship here</h2>
